-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.5.3, 6.6.2, 6.7.0 Beta3
-
macOS 14.3.1
MacBook Pro 13-inch, M1, 2020
-
7a06020c0 (dev), 8b3e1820c (6.7), aefb955d1 (6.6), 7b2f2a70e (tqtc/lts-6.5), 5c1818502 (dev), dbb22dc83 (6.9), 5efa73d07 (6.8)
-
Multimedia wk 51-2
Audio input devices list is not updated when connecting new device.
Relevant at least for:
Audio Recorder Example (Examples/<Qt Version>/multimedia/audiorecorder/)
Audio Source Example (/Examples/<Qt Version>/multimedia/audiosource/)
I suppose it doesn't depend on the platform or multimedia backend, but I reproduce it
stably at least on macOS and AirPods, with the next steps:
Steps to reproduce:
1. Pair AirPods with Mac Book via Bluetooth
2. Put AirPods into the case and close the lid, so it should look like this
3. Launch an example, Audio Recorder for instance, and observe Input devices list,
it should look like this
4. Open AirPods case and insert the earphone into your ear, so device become active and available in the system
4. Observe Input devices list in the example app.
Actual result: AirPods are not displayed in the Input devices list, so they are not available for selection by an user.
Expected result: AirPods should be displayed in the Input devices list, and available for selection by an user.
- relates to
-
QTBUG-123045 [Examples] Qt warning on changing audio input in Audio Source example
-
- Closed
-
For Gerrit Dashboard: QTBUG-123023 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
548361,6 | Examples: update list of input devices in AudioRecorder example | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
549257,2 | Examples: update list of input devices in AudioRecorder example | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
549422,2 | Examples: update list of input devices in AudioRecorder example | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
549471,2 | Examples: update list of input devices in AudioRecorder example | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |
614378,4 | examples: audiosource - update audio device list | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
614651,2 | examples: audiosource - update audio device list | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
614884,2 | examples: audiosource - update audio device list | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |