Examples: update list of input devices in AudioRecorder example

Update the input device list when adding/removing an audio input
device (such as a Bluetooth microphone). Also try to restore the
previously selected device if it is still present in the new list.

Task-number: QTBUG-123023
Pick-to: 6.5
Change-Id: Icaaa208bfdb333045d93d1676b365e3c73cdf7f4
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 7a06020c0acdd81afccd46af30d2c42582dc64c4)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 8b3e1820c4d1a57417c18739ca9cce7a9bbab527)